examples/datalog/29_temporal/11_time_window.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_time_win
Knowledge graph 'test_time_win' created.
Switched to knowledge graph: test_time_win
> .kg use test_time_win
Switched to knowledge graph: test_time_win
> +readings[(1, 100, 10), (2, 105, 20), (3, 110, 15), (4, 200, 30), (5, 205, 25)].
Inserted 5 fact(s) into 'readings'.
> window_count(Start, <COUNT:Id>) :- readings(Id, Time, _), Start = 100, Time >= Start, Time < Start + 20.
Script error: Parse error: Unknown aggregate function: 
